objects/Lead.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0%2E0 Cold %2F Not Started</fullName>
        </values>
        <values>
            <fullName>0%2E0 New</fullName>
        </values>
        <values>
            <fullName>0%2E1 Contacted</fullName>
        </values>
        <values>
            <fullName>0%2E2 Replied</fullName>
        </values>
        <values>
            <fullName>1%2E0 Qualified</fullName>
        </values>
        <values>
            <fullName>Bad Contact Info</fullName>
        </values>
        <values>
            <fullName>Do Not Contact</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>MGL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MGL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>[CB] Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>used for uploading offline conversions and lead quality score back to Google Ads
created by ksquared on 4/23/2020
please do not delete</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Sort__c</fullName>
        <formula>text(Contact_Status__c) + TEXT( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[F] Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <description>Checkbox field that&apos;s mapped to Contact at lead conversion. Because it&apos;s a checkbox, it only updates the contact if the contact was created from lead conversion. Created Sept 26, 2022 and used as logic in process builder so that contacts created from a lead can be excluded from an automation. Admin only field.</description>
        <formula>TRUE</formula>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Raised__c</fullName>
        <label>Raised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographic_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5. Has or can acuire a budget</fullName>
                </value>
                <value>
                    <fullName>4. Has a homegrown solution or tried a competitor</fullName>
                </value>
                <value>
                    <fullName>3. Actively looking for a solution</fullName>
                </value>
                <value>
                    <fullName>2. Aware of having a problem</fullName>
                </value>
                <value>
                    <fullName>1. Has a problem (but doesn&apos;t know it)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>Person Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTrial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_MQL__c</fullName>
        <label>MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_SAL__c</fullName>
        <label>SAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_SQL__c</fullName>
        <label>SQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enriched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Clearbit enrichment</description>
        <label>Enriched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MGL_Date__c</fullName>
        <label>MGL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEditor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isViewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isViewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>Created for advertisement</description>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Source__c</fullName>
        <inlineHelpText>Lead Genius created lead</inlineHelpText>
        <label>LG Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refreshed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dummy field used to trigger mass refresh.</description>
        <label>Refreshed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDR_Notes__c</fullName>
        <label>SDR Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>[CB] Seniority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isChurned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChurned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Needs__c</fullName>
        <label>Core Needs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centralize Insights</fullName>
                </value>
                <value>
                    <fullName>Prioritize Features</fullName>
                </value>
                <value>
                    <fullName>Plan a roadmap</fullName>
                </value>
                <value>
                    <fullName>Collect feedback (Portal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indexed_At__c</fullName>
        <label>Indexed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>TEXT(Owner:User.Team__c)</formula>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Space_Project_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC_Offset__c</fullName>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_PB_ID__c</fullName>
        <externalId>true</externalId>
        <label>User PB ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_Sub_Role__c</fullName>
        <label>[CB] Sub Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Day__c</fullName>
        <formula>Datevalue( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRFG_Funnel__c</fullName>
        <label>Funnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Person</fullName>
                </value>
                <value>
                    <fullName>Person + Fit</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Engaged + Fit</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Pipeline Opportunity</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Recycled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRFG_Person__c</fullName>
        <label>Person</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dem_Score_1__c</fullName>
        <label>Dem Score 1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dem_Score_2__c</fullName>
        <label>Dem Score 2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Survey_Role__c</fullName>
        <label>Survey Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a role not listed</fullName>
                </value>
                <value>
                    <fullName>customer success</fullName>
                </value>
                <value>
                    <fullName>customer support</fullName>
                </value>
                <value>
                    <fullName>design</fullName>
                </value>
                <value>
                    <fullName>engineering</fullName>
                </value>
                <value>
                    <fullName>marketing</fullName>
                </value>
                <value>
                    <fullName>product management</fullName>
                </value>
                <value>
                    <fullName>project management</fullName>
                </value>
                <value>
                    <fullName>sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>utmorigterm__c</fullName>
        <label>UTM Original Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_City__c</fullName>
        <label>Company City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <label>Company Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_Engaged__c</fullName>
        <label>Engaged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Founded_Year__c</fullName>
        <label>Founded Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inbound_Date__c</fullName>
        <label>Inbound Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score_at_MQL__c</fullName>
        <label>Score at MQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technologies__c</fullName>
        <label>Technologies</label>
        <length>45000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Source__c</fullName>
        <label>Trial Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trial Request</fullName>
                </value>
                <value>
                    <fullName>Trial User</fullName>
                </value>
                <value>
                    <fullName>Trial Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_domain__c</fullName>
        <description>Strips domain from email address</description>
        <formula>MID(Email, FIND(&quot;@&quot;,  Email,1)+1, 99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>email domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_State__c</fullName>
        <label>Company State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Notes__c</fullName>
        <label>Consent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <formula>TEXT(Owner:User.Owner_Manager__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Numbers__c</fullName>
        <label>Phone Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portal_Source__c</fullName>
        <label>Portal Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portal_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Follow_up__c</fullName>
        <formula>Status_Last_Updated__c -   LD_Routing_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Follow up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Number__c</fullName>
        <formula>1</formula>
        <label>Unique #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isContributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isContributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_utm_term_c__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmorigmedium__c</fullName>
        <label>UTM Original Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmorigsource__c</fullName>
        <label>UTM Original Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Street__c</fullName>
        <label>Company Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.0 Unqualified</fullName>
                </value>
                <value>
                    <fullName>1.1 Nurturing</fullName>
                </value>
                <value>
                    <fullName>2.0 MQL</fullName>
                </value>
                <value>
                    <fullName>2.1 PQL</fullName>
                </value>
                <value>
                    <fullName>3.0 Attempting</fullName>
                </value>
                <value>
                    <fullName>4.0 Working</fullName>
                </value>
                <value>
                    <fullName>6.0 Dead</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>4.0 Replied</fullName>
                </value>
                <value>
                    <fullName>0.0 Disqualified</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Nurturing</fullName>
                </value>
                <value>
                    <fullName>5.1 Account Contact</fullName>
                </value>
                <value>
                    <fullName>5.0 Sales Qualified</fullName>
                </value>
                <value>
                    <fullName>0.0 Account Contact</fullName>
                </value>
                <value>
                    <fullName>1.0 New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRFG_Has_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_MQL_Date__c</fullName>
        <description>Created 12/15: This was created due to the Lifecycle Stage - First MQL Date being a date fields type instead of a date/time field type</description>
        <label>First MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Handraise_Date__c</fullName>
        <label>Handraise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_in_user__c</fullName>
        <label>Signed in user</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Outreach__c</fullName>
        <label>Stage (Outreach)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Outreach_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starter_Source__c</fullName>
        <label>Starter Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Starter_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Cbit_Kubo__c</fullName>
        <formula>cbit__Clearbit__r.cbit__EmailProvider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test - Cbit - Kubo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>utmorigcontent__c</fullName>
        <label>UTM Original Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Country__c</fullName>
        <label>Company Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRFG_MQL_Reason__c</fullName>
        <label>MQL Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met MQL Criteria</fullName>
                </value>
                <value>
                    <fullName>Fast Track</fullName>
                </value>
                <value>
                    <fullName>Manual Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRFG_Person_Fit__c</fullName>
        <label>Person + Fit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Addresses__c</fullName>
        <label>Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees_Range__c</fullName>
        <label>Employees Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routing_Date__c</fullName>
        <inlineHelpText>Last Time this lead was routed due to marketing activity through lean data</inlineHelpText>
        <label>LD Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LS_Replied_Date__c</fullName>
        <label>LS - Replied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>First MQL Campaign</inlineHelpText>
        <label>First MQL Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Latest_Campaign_Leads</relationshipLabel>
        <relationshipName>Latest_Campaign_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lifecyle_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <description>Field to capture current + historical notes from Marketing events over time. This field is updated from automation as Marketing Notes field is updated.</description>
        <label>Marketing Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_territory__c</fullName>
        <inlineHelpText>Geo Sales Territory</inlineHelpText>
        <label>Sales territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_in_space__c</fullName>
        <label>Signed in space</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slintel_Lead_Id__c</fullName>
        <label>Slintel Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasSubscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasSubscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadGrade6sense__c</fullName>
        <description>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</description>
        <label>6sense Lead Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <formula>CASE(mk_customer_fit_segment__c,
&apos;&apos;,&apos;&apos;,
&apos;very good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), &apos;good&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20) + IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), &apos;medium&apos;, IMAGE(&quot;https://cdn.madkudu.com/images/star.png&quot;, &quot;Star&quot;, 20, 20), IMAGE(&quot;https://cdn.madkudu.com/images/cross.png&quot;, &quot;Star&quot;, 20, 20))</formula>
        <label>MK Customer Fit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_medium_c__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_utm_source_c__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_cb_LastName__c</fullName>
        <label>tmp_cb_LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utmorigcampaign__c</fullName>
        <label>UTM Original Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>Business Segment used for classification of new leads that come in our way.</description>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if someone has sign up for the ProductMakers Community and Opted into Receiving emails</description>
        <label>Community Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_LinkedIn__c</fullName>
        <label>Company LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company_Location__c</fullName>
        <label>Company Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRFG_Engaged_Fit__c</fullName>
        <label>Engaged + Fit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRFG_Has_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Segment__c</fullName>
        <description>Looks at the employee count and country and returns segment value based on criteria at a given point in time. This is the primary segment field.</description>
        <formula>IF(Max_Account_Employees__c &lt; 1001,&quot;SMB&quot;,&quot;EN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Segmentation by # of Employees in a Company, Source: Clearbit
NOAM + RoW
ESB: 1-50
SMB: 51-1000
EN: &gt; 1,000 +

EMEA
ESB: 1-50
SMB: 51-500
MM: 501-5,000
EN: &gt; 5,000</inlineHelpText>
        <label>Employee # Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Ends__c</fullName>
        <label>Fiscal Year Ends</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Routed_Reason__c</fullName>
        <label>LD Routed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Routing_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LD_Trigger_Field__c</fullName>
        <inlineHelpText>Trigger field for routing</inlineHelpText>
        <label>LD Trigger Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>